Bug 98553 - error boxes should always include server name
Summary: error boxes should always include server name
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-02-04 13:13 UTC by Unknown
Modified: 2009-09-09 22:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2005-02-04 13:13:34 UTC
Version:            (using KDE KDE 3.3.2)
Installed from:    Debian testing/unstable Packages

Not all error boxes (or info boxes) include the involved server, this results in errors like "Server does not support xx". This is very annoying if you have multiple servers for receiving and sending. Every error box should include the server name or the name of the transport used (like the "sending failed" error).

Ciao
/dirk
Comment 1 Martin Koller 2009-09-09 22:43:41 UTC
SVN commit 1021698 by mkoller:

BUG: 98553

Add account name to error dialog text


 M  +2 -2      popaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1021698