BUG: 98553

Add account name to error dialog text

svn path=/trunk/KDE/kdepim/; revision=1021698